# easyrpg-buildscripts

./: BUILDING.md  CMakeLists.txt  LICENSE
.github/: dependabot.yml
.github/workflows/: update_libraries.yml
3ds/: CMakeLists.txt  libraries.cmake
android/: 1_download_library.sh  2_build_toolchain.sh  4_build_liblcf.sh  5_build_android_port.sh
cmake/: dkp-aux.cmake  functions.cmake  libraries.cmake
emscripten/: 1_download_library.sh  2_build_toolchain.sh
ios/: 2_build_toolchain.sh
linux-static/: 1_download_library.sh  2_build_toolchain.sh  CMakeLists.txt
macos/: 1_download_library.sh  2_build_toolchain.sh
psp/: 1_download_library.sh  2_build_toolchain.sh  3_cleanup.sh  README.md  mpg123.patch  tremor.patch
shared/: common.sh  ini2sh.py  packages.ini  packages.sh  updater.py
switch/: CMakeLists.txt
tvos/: 1_download_library.sh  2_build_toolchain.sh
wii/: CMakeLists.txt
windows/: build.cmd
